<resources>
    <string name="app_name">JPMCLookAlikeMVP</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail Address</string>
    <string name="verification_check">checking for user verification</string>
    <string name="verify">Verified</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign out</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="hint_password">password</string>
    <string name="hint_email">Email Address</string>
    <string name="auth_failed">authentication failed</string>
    <string name="loading">Loading…</string>
    <string name="dummy_variable">dummy</string>
    <string name="something">something</string>
    <string name="bank">bank account</string>
    <string name="balance">Balance</string>
    <string name="dummy_business_transaction">dummy business transaction</string>
    <string name="user">user</string>
    <string name="transaction">transaction amount</string>
    <string name="checking_acct">dummy_checking_account</string>
    <string name="pay_bills">Pay bills</string>
    <string name="checking">Checking Account</string>
    <string name="currency">Currency</string>
    <string name="available_balance">Available balance</string>
    <string name="current_date">current date</string>
    <string name="greeting">greeting</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">home</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="total_value">Total Value</string>
    <string name="nav_welcome">Welcome to JPMC Banking App</string>
    <string name="menu_item">Menu Item</string>
    <string name="log_out">Log out</string>
    <string name="sub_items">Sub items</string>
    <string name="checking_account">Checking Account</string>
    <string name="transactions">Transactions</string>
    <string name="market">Market</string>
    <string name="curreny">Currency</string>
    <string name="market_shares_amount">Market Shares Amount</string>
    <string name="total_amount_available_currency">Total Amount Available (currency_</string>
    <string name="populate_database">Populate database</string>
    <string name="populate_fb_db">Firebase Database Populated! Use nav drawer to select an Activity.</string>
    <string name="dummy_transactions">Dummy Transactions</string>
    <string name="dummy_market_investments">Dummy_market_investments</string>
    <string name="unrealized_gains_losses">UNREALIZED GAINS/LOSSES</string>
    <string name="price">Price</string>
    <string name="today_s_change">TODAY\'S CHANGE</string>
    <string name="equity">Equity</string>
    <string name="shares">Shares</string>
    <string name="dummy_market_company">company</string>
    <string name="cv_unrealized_gain_loss">Unrealized Gain/Loss</string>
    <string name="transaction_amount">transaction amount</string>
    <string name="_500">500</string>
    <string name="value">Value</string>
    <string name="rv_position">position</string>
</resources>
