<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_checking_fragment"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/checking_account"
            android:checked="true"
            android:onClick="selectDrawerItem"/>
        <item
            android:id="@+id/nav_transactions_fragment"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/transactions"
            android:onClick="selectDrawerItem"/>
        <item
            android:id="@+id/nav_market_fragment"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/market"
            android:onClick="selectDrawerItem"/>
    </group>

    <item android:title="@string/sub_items">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_face_black_24dp"
                    android:title="@string/log_out" />
            </group>
        </menu>
    </item>
</menu>