<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_padding"
            android:text="@string/market_shares_amount"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/total_value"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:visibility="visible" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/brown"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tv_current_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="@dimen/default_padding"
            android:text="@string/current_date"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_unrealized_gains_losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:paddingStart="@dimen/default_padding"
            android:text="@string/unrealized_gains_losses"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:visibility="visible"
            android:paddingLeft="@dimen/default_padding"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_shares_gains_losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:paddingEnd="@dimen/default_padding"
            android:text="@string/currency"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/green"
            android:visibility="visible"
            android:paddingRight="@dimen/default_padding"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_todays_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:paddingStart="@dimen/default_padding"
            android:text="@string/today_s_change"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:visibility="visible"
            android:paddingLeft="@dimen/default_padding"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_shares_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:paddingEnd="@dimen/default_padding"
            android:text="@string/currency"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/green"
            android:visibility="visible"
            android:paddingRight="@dimen/default_padding"
            tools:ignore="RtlSymmetry" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown" >


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray" />

        <TextView
            android:id="@+id/tv_price_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start|top"
            android:layout_margin="@dimen/default_padding"
            android:text="@string/price"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_value_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center|end"
            android:layout_margin="@dimen/default_padding"
            android:text="@string/total_value"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_gains_losses_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="@dimen/default_padding"
            android:text="@string/cv_unrealized_gain_loss"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:visibility="visible" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBrown">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray" />

        <TextView
            android:id="@+id/tv_equity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/default_padding"
            android:text="@string/equity"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/default_padding" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom" />

</LinearLayout>