<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="@dimen/cardview_default_elevation"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:contentPadding="@dimen/default_padding"
        tools:targetApi="lollipop">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <TextView
                android:id="@+id/tv_checking_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="position"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cv_dummy_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/dummy_market_company"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cv_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_gravity="bottom|start"
                android:paddingTop="8dp"
                android:text="@string/transaction"
                android:textSize="16sp" />



            <TextView
                android:id="@+id/cv_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingTop="8dp"
                android:layout_margin="24dp"
                android:layout_gravity="bottom|end"
                android:text="@string/price"
                android:textSize="16sp"/>


        </FrameLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>